spring PathMatchingResourcePatternResolver used to list file names from classpath...

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <spring.version>5.0.1.RELEASE</spring.version>
         <avro.version>1.7.7</avro.version>        
         <json-io.version>4.9.0</json-io.version>
         <junit.version>4.11</junit.version>
@@ -86,9 +87,18 @@
                 <artifactId>snakeyaml</artifactId>
                 <version>${snakeyaml.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-core</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+        </dependency>
 		<dependency>
             <groupId>org.apache.avro</groupId>
             <artifactId>avro</artifactId>
